[Fix] Fix bad z-index

--- a/statics/css/style_v2.sass
+++ b/statics/css/style_v2.sass
@@ -211,6 +211,7 @@ form
     height: 20px !important
 
 footer
+    z-index: 0
     position: absolute
     left: 0
     bottom: 0
@@ -234,7 +235,6 @@ footer
         transition: color 0.2s
 
 .slide-nav
-    z-index: 1
     position: fixed
     left: 0
     top: 0
@@ -305,6 +305,7 @@ footer
                 transition: color 0.2s
 
 header
+    z-index: 1
     position: absolute
     left: 0
     top: 0
